그리드 레이아웃 이슈 해결(1fr -> 100%로 변경)

--- a/css/style.css
+++ b/css/style.css
@@ -124,16 +124,16 @@ input[type="search"] {
 .appMain{
   width: 100%;
   padding: var(--spacing-base) var(--spacing-lg);
-  display: flex;
-  flex-flow: row wrap;
-  /* display: grid;
-  grid-template-columns: 1fr;
+  /* display: flex;
+  flex-flow: row wrap; */
+  display: grid;
+  grid-template-columns: 100%;
   grid-template-rows: auto;
   grid-template-areas: "book"
                        "news"
                        "board"
                        "favorite"
-                       "twitter"; */
+                       "twitter";
 }
 
 .book, .news, .board, .favorite, .twitter{
